--- a/src/app/game-list/game-list.component.scss
+++ b/src/app/game-list/game-list.component.scss
@@ -1,6 +1,6 @@
 .common-actions {
   position: fixed;
-  right: 15px;
+  left: calc(100vw - 90px);
   bottom: 15px;
 
   display: flex;
